[tool.poetry]
name = "bike_price"
version = "0.1.0"
description = "Streamlit app to predict bike prices"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.35.0"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"
numpy = "^1.26.4"
joblib = "^1.4.2"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
fpdf = "^1.7.2"  # if you're generating PDF reports

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
